test/scc_test/decl/semantic-errors/058.a
058.t:3:5: error: function definition is not allowed here